# Multi-Agent-Hospital

./: .env  .gitignore  README.md  package-lock.json
.github/: copilot-instructions.md
Theory part/: DBMS-ReportFormat - 2025-26.docx  report.txt  research_paper.txt  synopsis.txt
backend/: .env  AI_hospital.py  api.py  config.py  cors_config.py  database.py  main.py  models.py  mongo_client.py  oauth2.py  pyproject.toml  requirements.txt  schemas.py  test.py
backend/Knowledge_notebooks/: initialize_rag.py  vector_rag.ipynb  vector_rag.py
backend/custom_libs/: AI_hospital.ipynb  Audioconvert.py
backend/routers/: history.py  oauth.py  users.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/ui/: App.tsx  glass.css
